# XingJu

./: .env.example  .gitignore  .prettierrc.cjs  ARCHITECTURE-GUIDE.md  AUTOMATED-WORKFLOW.md  BUILD-FIX-GUIDE.md  BUILD-RELEASE.md  CI-CD-SETUP.md  CI-CD-TEST-TASK.md  CODE_OPTIMIZATION_AND_CICD.md  CONTRIBUTING.md  Cargo.toml  DESIGN-REDESIGN.md  DEVELOPMENT-WORKFLOW-v2.md  FINAL-COMPLETION-REPORT.md  FINAL-PUBLISH-INSTRUCTIONS.md  FINAL-RELEASE-SUMMARY.md  FIX-SUMMARY.md  GITHUB-PUSH-SUCCESS.md  IMPLEMENTATION.md  LICENSE  MANUAL-RELEASE-GUIDE.md  OPTIMIZATION-COMPLETE.md  PHASE1-COMPLETE.md  PHASE2-3-COMPLETE.md  QUICK-REFERENCE.md  QUICK-TEST.md  RC-TEST-SUMMARY.md  RC8-FIX-REPORT.md  README.md  REDESIGN-COMPLETION-REPORT.md  REFACTOR-PLAN.md  RELEASE-CHECKLIST.md  RELEASE-NOTES-v2.0.0.md  RELEASE.md  SDLC_TEMPLATE.md  STATUS.md  TASK-ASSIGNMENT.md  TEST-PLAN.md  VERSIONING.md  (+10 more)
.github/workflows/: build-fix.yml  build-release.yml  ci-test.yml  ci.yml  release.yml
docs/: API.md  TEAM_ROLES.md
python/: downloader.py  search.py
scripts/: analyze-build-failure.sh  build-all-platforms.sh  bump-version.sh  create-rc.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: manga.rs  mod.rs  music.rs  novel.rs  video.rs
src-tauri/src/api/providers/: bilibili.rs  mod.rs  netease.rs  qidian.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/container/: mod.rs
src-tauri/src/database/: favorite.rs  mod.rs  sync.rs
src-tauri/src/utils/: hotkey.rs  mod.rs  plugin.rs
src.bak/: App.tsx  main.tsx
src.bak/components/Layout/: Player.tsx  Sidebar.tsx
src.bak/components/Novel/: NovelModule.tsx
src.bak/components/Video/: VideoModule.tsx
src.bak/styles/: cyberpunk.css  design-system.css
src/__tests__/: README.md  setup.ts
src/__tests__/components/: MangaReader.test.tsx
src/__tests__/services/: api.test.ts  novelService.test.ts
src/components/: ErrorBoundary.tsx
src/components/Layout/: Header.tsx  Player.tsx  Sidebar.tsx
src/components/Manga/: MangaModule.tsx  MangaReader.tsx  index.ts
src/components/Music/: MusicModule.tsx  index.tsx
src/components/Novel/: NovelModule.tsx  NovelReader.tsx
src/components/Video/: VideoModule.tsx  index.tsx
src/components/common/: LazyImage.tsx  index.ts
src/hooks/: index.ts  useKeyboard.ts  useLocalStorage.ts  useTauriApi.ts
src/main/: index.ts
src/main/ipc/: content.ts  download.ts  index.ts  settings.ts
src/main/utils/: store.ts
src/python/: API_DOCUMENTATION.md  API_README.md  IMPLEMENTATION_REPORT.md  main.py  requirements.txt  test_crawlers.py
src/python/api/: __init__.py  manga.py  music.py  novel.py  video.py
src/python/crawlers/: __init__.py  base.py  manga_crawler.py  music_crawler.py  novel_crawler.py  video_crawler.py
src/python/models/: __init__.py  schemas.py
src/services/: api.ts
src/store/: index.ts
src/styles/: animations.css  backgrounds.css  components.css  design-system.css  index.css  reader-common.css  responsive.css  variables.css
src/test/: setup.ts
src/test/components/: LazyImage.test.tsx
src/types/: reader.ts
src/utils/: storage.ts
(+3 files in other folders)
