[workspace]
members = [
    "src-tauri"
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Kk <xfengyin@gmail.com>"]
license = "MIT"
repository = "https://github.com/xfengyin/XingJu"
description = "星聚 - 赛博朋克风格聚合应用"

[workspace.dependencies]
# Core
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# Tauri
tauri = { version = "1.5", features = ["shell-open"] }
