[package]
name = "xingju-core"
version = "2.0.0"
edition = "2021"
authors = ["Kk <xfengyin@gmail.com>"]
license = "MIT"

[lib]
name = "xingju_core"
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version = "0.22", features = ["extension-module"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }


