[package]
name = "xingju-core"
version = "2.1.0"
edition = "2021"
authors = ["Kk <xfengyin@gmail.com>"]
license = "MIT"

[lib]
name = "xingju_core"
crate-type = ["cdylib", "staticlib", "lib"]

[[bin]]
name = "xingju"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "migrate"] }
chrono = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
# HTTP 客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# 全局状态
once_cell = "1.19"
# UUID 生成
uuid = { version = "1.8", features = ["v4"] }
# URL 编码
urlencoding = "2.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true